# PhotosSorter

./: .gitignore  CONTRIBUTING.md  LICENSE  Makefile  README.md  config.yaml.example  pyproject.toml  requirements.txt  run.py  setup.py
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
logs/: .gitkeep
src/: __init__.py  async_file_organizer.py  exif_extractor.py  file_organizer.py  mpg_thm_merger.py  photos_sorter.py  video_processor.py
src/utils/: __init__.py  config_validator.py  dependency_injection.py  exceptions.py  interfaces.py  statistics.py  structured_logging.py
tests/: __init__.py  test_dependency_injection.py
