[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "photos-sorter"
version = "1.0.0"
description = "Automatic photo and video organizer that sorts files by date using EXIF metadata"
readme = "README.md"
license = { file = "LICENSE" }
authors = [{ name = "PhotosSorter Team" }]
maintainers = [{ name = "PhotosSorter Team" }]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: End Users/Desktop",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Multimedia :: Graphics",
  "Topic :: System :: Filesystems",
  "Topic :: Utilities",
]
keywords = ["photos", "videos", "organize", "exif", "metadata", "sorting"]
requires-python = ">=3.8"
dependencies = [
  "Pillow>=10.0.0",
  "exifread>=3.0.0",
  "PyYAML>=6.0.0",
  "python-dateutil>=2.8.0",
  "tqdm>=4.65.0",
]

[project.optional-dependencies]
video = ["ffmpeg-python>=0.2.0"]
dev = ["pytest>=7.0.0", "black>=22.0.0", "flake8>=4.0.0", "mypy>=1.0.0"]

[project.urls]
Homepage = "https://github.com/abshka/PhotosSorter"
Repository = "https://github.com/abshka/PhotosSorter"
Issues = "https://github.com/abshka/PhotosSorter/issues"
Documentation = "https://github.com/abshka/PhotosSorter#readme"

[project.scripts]
photos-sorter = "photos_sorter:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-dir]
"" = "src"

[tool.black]
line-length = 88
target-version = ['py38']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.flake8]
max-line-length = 88
extend-ignore = ["E203", "W503"]
exclude = [
  ".git",
  "__pycache__",
  "docs/source/conf.py",
  "old",
  "build",
  "dist",
  ".venv",
]

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
addopts = "-v --tb=short"
